ブール超冪追記

--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -638,6 +638,13 @@
 		よって，$x \in j(A)$とすると$\alpha < \lambda$がとれて$x = j(f)(\alpha)$だが，$j(f)(\alpha) = j(f(\alpha))$なので，これで良い．
 
 		2つ目．$M$で$j(S)$は${<}\lambda$-directedな半順序なことが成り立ち，$M$が${<}\kappa$-closedなことを使うとよい．
+
+		3つ目．$\cf(\alpha) = \lambda \ne \kappa$とする．
+		$f \colon \lambda \to \alpha$を共終単調増加関数とする．
+		$\lambda < \kappa$ならば$M$の中で$j(f) \colon \lambda \to j(\alpha)$が共終単調増加関数となるが，これは絶対的である．
+		$\lambda > \kappa$ならば$\alpha$は${\le}\kappa$-directedな半順序なので，$j``\alpha$は$j(\alpha)$の中で共終である．
+		よって$j``f = (j(\xi), j(f(\xi)))_{\xi < \lambda}$は$\cf(j`` \lambda) = \cf(j `` \alpha) = \cf(j(\alpha))$を目撃する．
+		他方で，$\cf(j``\lambda) = \cf(\lambda) = \lambda$である．これで示せた．
 	\end{proof}
 
 	\nocite{*}
