参考文献追加

--- a/cichonsmaximum.bib
+++ b/cichonsmaximum.bib
@@ -6,3 +6,19 @@
 	volume={266},
 	pages={93-114}
 }
+@article{goldstern2019cichon,
+	title={Cicho{\'n}'s maximum},
+	author={Goldstern, Martin and Kellner, Jakob and Shelah, Saharon},
+	journal={Annals of Mathematics},
+	volume={190},
+	number={1},
+	pages={113--143},
+	year={2019},
+	publisher={JSTOR}
+}
+@article{cardona2022forcing,
+	title={Forcing constellations of Cicho$\backslash$'n's diagram by using the Tukey order},
+	author={Cardona, Miguel A and Mejía, Diego A},
+	journal={arXiv preprint arXiv:2203.00615},
+	year={2022}
+}
