Dealing with bを書き始める

--- a/cichonsmaximum.bib
+++ b/cichonsmaximum.bib
@@ -17,7 +17,7 @@
 	publisher={JSTOR}
 }
 @article{cardona2022forcing,
-	title={Forcing constellations of Cicho$\backslash$'n's diagram by using the Tukey order},
+	title={Forcing constellations of Cicho{\'n}'s diagram by using the Tukey order},
 	author={Cardona, Miguel A and Mejía, Diego A},
 	journal={arXiv preprint arXiv:2203.00615},
 	year={2022}
