「bを扱う」の節を追記

--- a/cichonsmaximum.bib
+++ b/cichonsmaximum.bib
@@ -22,3 +22,13 @@
 	journal={arXiv preprint arXiv:2203.00615},
 	year={2022}
 }
+
+@article{engelking1965some,
+	title={Some theorems of set theory and their topological consequences},
+	author={Engelking, Ryszard and Kar{\l}owicz, Monika},
+	journal={Fundamenta Mathematicae},
+	volume={57},
+	number={3},
+	pages={275--285},
+	year={1965}
+}
